syntax = "proto3";

package dataplane;

import "cloud/disk_manager/internal/pkg/dataplane/snapshot/storage/protos/types.proto";

option go_package = "a.yandex-team.ru/cloud/disk_manager/internal/pkg/dataplane/protos";

////////////////////////////////////////////////////////////////////////////////

message CollectSnapshotsTaskState {
    repeated types.DeletingSnapshotKey Snapshots = 1;
}
